Commit3  dev hihi

--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
-  font-synthesis: none;
+  font-synthesis: none;ádasdasd
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+ádasdsad
 a {
   font-weight: 500;
   color: #646cff;
